test/files/neg/t5510.check
t5510.scala:5: error: unclosed string literal (\" is an escaped quote, not the end of string)
  val sb = "x\"y
           ^
t5510.scala:6: error: unclosed string literal
  val s1 = s"xxx
             ^
t5510.scala:7: error: unclosed string literal
  val s2 = s"xxx $x
                   ^
t5510.scala:8: error: unclosed string literal
  val s3 = s"xxx $$
             ^
t5510.scala:9: error: unclosed string literal
  val s4 = ""s"
               ^
t5510.scala:10: error: unclosed multi-line string literal
  val s5 = ""s""" $s1 $s2 s"
                         ^
t5510.scala:11: error: unclosed multi-line string literal
}
 ^
7 errors found
